[package]
name = "example"
version = "0.1.0"
authors = ["Mingrui Huang <mingrui.huang@setl.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.4.0"
regex = "1"
clap = "2"
rand= "0.7"

[[bin]]
name = "1_process_csv"
path = "src/bin/1_process_csv.rs"
test = false
bench = false

[[bin]]
name = "1_6_dangling_pointer"
path = "src/bin/1_6_dangling_pointer.rs"
test = false
bench = false

[[bin]]
name = "1_7_data_race"
path = "src/bin/1_7_data_race.rs"
test = false
bench = false

[[bin]]
name = "1_8_buffer_overflow"
path = "src/bin/1_8_buffer_overflow.rs"
test = false
bench = false

[[bin]]
name = "1_9_borrow_after_move"
path = "src/bin/1_9_borrow_after_move.rs"
test = false
bench = false

[[bin]]
name = "1_10_store_data"
path = "src/bin/1_10_store_data.rs"
test = false
bench = false

[[bin]]
name = "2_1_number"
path = "src/bin/2_1_number.rs"
test = false
bench = false

[[bin]]
name = "2_2_float_number"
path = "src/bin/2_2_float_number.rs"
test = false
bench = false

[[bin]]
name = "2_3_float_number_tolerance"
path = "src/bin/2_3_float_number_tolerance.rs"
test = false
bench = false

[[bin]]
name = "2_4_float_number_nan"
path = "src/bin/2_4_float_number_nan.rs"
test = false
bench = false

[[bin]]
name = "2_5_num_crate"
path = "src/bin/2_5_num_crate.rs"
test = false
bench = false

[[bin]]
name = "2_10_loop_through_aray"
path = "src/bin/2_10_loop_through_aray.rs"
test = false
bench = false

[[bin]]
name = "2_11_loop_iterator"
path = "src/bin/2_11_loop_iterator.rs"
test = false
bench = false

[[bin]]
name = "2_12_loop_iterator_own"
path = "src/bin/2_12_loop_iterator_own.rs"
test = false
bench = false

[[bin]]
name = "2_13_break_inner_loop"
path = "src/bin/2_13_break_inner_loop.rs"
test = false
bench = false

[[bin]]
name = "2_14_match"
path = "src/bin/2_14_match.rs"
test = false
bench = false

[[bin]]
name = "2_19_lifetime"
path = "src/bin/2_19_lifetime.rs"
test = false
bench = false

[[bin]]
name = "2_23_generic"
path = "src/bin/2_23_generic.rs"
test = false
bench = false

[[bin]]
name = "2_26_search_string"
path = "src/bin/2_26_search_string.rs"
test = false
bench = false

[[bin]]
name = "2_27_array"
path = "src/bin/2_27_array.rs"
test = false
bench = false

[[bin]]
name = "2_28_vec"
path = "src/bin/2_28_vec.rs"
test = false
bench = false

[[bin]]
name = "2_32_regex"
path = "src/bin/2_32_regex.rs"
test = false
bench = false

[[bin]]
name = "2_36_commandline_arg"
path = "src/bin/2_36_commandline_arg.rs"
test = false
bench = false

[[bin]]
name = "2_37_read_file"
path = "src/bin/2_37_read_file.rs"
test = false
bench = false

[[bin]]
name = "2_38_read_file"
path = "src/bin/2_38_read_file.rs"
test = false
bench = false

[[bin]]
name = "2_39_seach_file"
path = "src/bin/2_39_search_file.rs"
test = false
bench = false

[[bin]]
name = "2_40_seach_file_and_stdin"
path = "src/bin/2_40_seach_file_and_stdin.rs"
test = false
bench = false

[[bin]]
name = "3_9_not_quite_file"
path = "src/bin/3_9_not_quite_file.rs"
test = false
bench = false

[[bin]]
name = "3_10_defining_files_new_fn"
path = "src/bin/3_10_defining_files_new_fn.rs"
test = false
bench = false

[[bin]]
name = "3_11_defining_files_define_method"
path = "src/bin/3_11_defining_files_define_method.rs"
test = false
bench = false

[[bin]]
name = "3_12_error_handle_with_global_var"
path = "src/bin/3_12_error_handle_with_global_var.rs"
test = false
bench = false

[[bin]]
name = "3_14_error_handle_with_result"
path = "src/bin/3_14_error_handle_with_result.rs"
test = false
bench = false

[[bin]]
name = "3_16_parse_event_log"
path = "src/bin/3_16_parse_event_log.rs"
test = false
bench = false

[[bin]]
name = "3_19_read_trait"
path = "src/bin/3_19_read_trait.rs"
test = false
bench = false

[[bin]]
name = "3_22_implementing_display"
path = "src/bin/3_22_implementing_display.rs"
test = false
bench = false

[[bin]]
name = "4_4_ownership_moved"
path = "src/bin/4_4_ownership_moved.rs"
test = false
bench = false

[[bin]]
name = "4_9_return_ownership"
path = "src/bin/4_9_return_ownership.rs"
test = false
bench = false

[[bin]]
name = "4_16_avoid_ownership_issue_with_reference"
path = "src/bin/4_16_avoid_ownership_issue_with_reference.rs"
test = false
bench = false

[[bin]]
name = "4_17_avoid_ownership_issue_with_shortlived_variable"
path = "src/bin/4_17_avoid_ownership_issue_with_shortlived_variable.rs"
test = false
bench = false

[[bin]]
name = "4_20_derive_copy_for_type"
path = "src/bin/4_20_derive_copy_for_type.rs"
test = false
bench = false

[[bin]]
name = "4_21_implement_copy_for_type"
path = "src/bin/4_21_implement_copy_for_type.rs"
test = false
bench = false

[[bin]]
name = "4_23_wrap_type_with_rc"
path = "src/bin/4_23_wrap_type_with_rc.rs"
test = false
bench = false

[[bin]]
name = "4_24_wrap_type_with_rc_refcell"
path = "src/bin/4_24_wrap_type_with_rc_refcell.rs"
test = false
bench = false

[[bin]]
name = "5_2_same_bits_for_different_things"
path = "src/bin/5_2_same_bits_for_different_things.rs"
test = false
bench = false

[[bin]]
name = "5_3_inpect_float_bits_by_interpreting_as_integer"
path = "src/bin/5_3_inpect_float_bits_by_interpreting_as_integer.rs"
test = false
bench = false

[[bin]]
name = "5_4_incrementing_an_integer_past_its_range"
path = "src/bin/5_4_incrementing_an_integer_past_its_range.rs"
test = false
bench = false

[[bin]]
name = "5_6_impossible_addition"
path = "src/bin/5_6_impossible_addition.rs"
test = false
bench = false

[[bin]]
name = "5_7_endianness"
path = "src/bin/5_7_endianness.rs"
test = false
bench = false

[[bin]]
name = "5_8_deconstruct_float_num"
path = "src/bin/5_8_deconstruct_float_num.rs"
test = false
bench = false

[[bin]]
name = "5_17_implement_q7_format"
path = "src/bin/5_17_implement_q7_format.rs"
test = false
bench = false

[[bin]]
name = "5_20_float_from_byte"
path = "src/bin/5_20_float_from_byte.rs"
test = false
bench = false

[[bin]]
name = "5_26_cpu_adder"
path = "src/bin/5_26_cpu_adder.rs"
test = false
bench = false

[[bin]]
name = "5_27_multiple_instructions"
path = "src/bin/5_27_multiple_instructions.rs"
test = false
bench = false

[[bin]]
name = "5_36_cpu_calling_function"
path = "src/bin/5_36_cpu_calling_function.rs"
test = false
bench = false
